fix: Use Collectors.toList() in ComponentInfo for Java 11 compatibility